--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "element-ui": "^1.3.7",
+    "lodash": "^4.17.4",
     "normalize.css": "^7.0.0",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1"
