--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "chart.js": "^2.6.0",
     "element-ui": "^1.3.7",
     "lodash": "^4.17.4",
     "normalize.css": "^7.0.0",
     "vue": "^2.3.3",
+    "vue-chartjs": "^2.7.1",
     "vue-router": "^2.3.1"
   },
   "devDependencies": {
